@@ -1523,6 +1523,11 @@ local Shadowlands = {
 			L["Quest"],
 		},
 	},
+	[164420] = { -- Laurent
+		["g"] = {
+			L["I am ready."],
+		},
+	},
 	[167849] = { -- Soul of Keltesh
 		["g"] = {
 			L["Quest"],
@@ -2019,7 +2024,7 @@ e:SetScript("OnEvent", function(self, event, ...)
 		if HelpMePlayOptionsDB.Dialog == false then return end
 		GetParentMapID(C_Map.GetBestMapForUnit("player"))
 		local numActiveQuests = C_GossipInfo.GetNumActiveQuests()
-		local numAvailableQuests = GetNumAvailableQuests()
+		local numAvailableQuests = C_GossipInfo.GetNumAvailableQuests()
 		if numActiveQuests > 0 then
 			local activeQuests = C_GossipInfo.GetActiveQuests()
 			for i = 1, numActiveQuests do
@@ -2029,17 +2034,19 @@ e:SetScript("OnEvent", function(self, event, ...)
 					-- be handled first.
 				end
 			end
-		elseif numAvailableQuests > 0 then
+		end
+		if numAvailableQuests > 0 then
 			for i = 1, numAvailableQuests do
 				SelectAvailableQuest(i)
 			end
-		end
-		local index = 1
-		local unitGUID = UnitGUID("target") or UnitGUID("mouseover")
-		local gossipOptions = C_GossipInfo.GetOptions()
-		if unitGUID then
-			local _, _, _, _, _, npcId = strsplit("-", unitGUID); npcId = tonumber(npcId)
-			SelectGossipOption(gossipOptions, npcId, parentMapId)
+		else
+			local index = 1
+			local unitGUID = UnitGUID("target") or UnitGUID("mouseover")
+			local gossipOptions = C_GossipInfo.GetOptions()
+			if unitGUID then
+				local _, _, _, _, _, npcId = strsplit("-", unitGUID); npcId = tonumber(npcId)
+				SelectGossipOption(gossipOptions, npcId, parentMapId)
+			end
 		end
 	end
 end)
